# MCP-Powered-Financial-Analyst

./: agents.py  app.py  crew.py  main.py  mcp_demo.py  pyproject.toml  requirements.txt  run_query.py  tools.py
agents/: code_executor.py  code_writer.py  query_parser.py
