[project]
name = "mcp-powered-financial-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.201.1",
    "matplotlib>=3.10.6",
    "openai>=1.109.1",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
    "yfinance>=0.2.66",
]


